agregue una descripcion en head

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Encriptador</title>
+  <meta name="description" content="Puedes encriptar tu texto facil y sin complicaciones">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="sweetAlert2/sweetalert2.min.css">
 </head>
