cambie Mensaje encriptador por Mensaje

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </section>
 
     <section id="caja_2">
-      <h2 id="titulo_2">Mensaje encriptado</h2>
+      <h2 id="titulo_2">Mensaje</h2>
       <textarea type="text" readonly="readonly" name="textTarea_2" id="textTarea_2"></textarea>
       <input class="btn" type="submit" value="Copiar" id="copiar">
       <input class="btn1" type="submit" value="Borrar" id="borrar1">
